--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
 
         <h1>My First Heading</h1>
-
+        <h3>Directly changed in github</h3>
         <p>My first paragraph.</p>
         <h2>Changing this</h2>
 
