--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <p>My first paragraph.</p>
         <h2>Changing this</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In fuga, cum aliquid doloremque, nihil voluptate pariatur facere delectus, commodi hic officia aliquam tempora asperiores exercitationem eveniet id optio numquam et.</p>
+        <p>Hi, come back again</p>
     </body>
 </html>
